--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Time Talks + TimeZone Clocks</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
+</head>
+<body class="bg-gradient-to-r from-slate-900 to-gray-800 text-white min-vh-100">
 
+  <div class="container py-5">
+    <h1 class="text-center mb-4 fw-bold text-info">⏳ Time Talks & Global Clocks</h1>
+
+    <!-- Quote Section -->
+    <div class="quote-box text-center mb-5">
+      <p id="quoteText" class="fs-3 fst-italic">Loading quote...</p>
+      <div class="timer-bar mt-3 mx-auto"></div>
+    </div>
+
+    <!-- Clock Section -->
+    <div class="row" id="clockContainer">
+      <!-- Dynamic clocks go here -->
+    </div>
+
+    <!-- Add Clock Form -->
+    <form id="timezoneForm" class="mt-5 text-center">
+      <label for="timezoneInput" class="form-label fs-5">Enter Timezone (e.g., Asia/Dubai):</label>
+      <input type="text" id="timezoneInput" class="form-control d-inline w-50" placeholder="Continent/City" required>
+      <button type="submit" class="btn btn-info mt-3">Add Clock</button>
+    </form>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
